--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.contextPath=/springboot
 server.port=8081
 
-spring.datasource.url = jdbc:mysql://localhost:3306/tech
+spring.datasource.url = jdbc:mysql://localhost:3306/egouos
 spring.datasource.username = root
 spring.datasource.password = 888888
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
@@ -16,3 +16,15 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# REDIS (RedisProperties)  
+spring.redis.database= # database name  
+spring.redis.host=localhost # server host  
+spring.redis.password= # server password  
+spring.redis.port=6379 # connection port  
+spring.redis.pool.max-idle=8 # pool settings ...  
+spring.redis.pool.min-idle=0  
+spring.redis.pool.max-active=8  
+spring.redis.pool.max-wait=-1  
+spring.redis.sentinel.master= # name of Redis server  
+spring.redis.sentinel.nodes= # comma-separated list of host:port pairs  
